[package]
name = "vermarine-lib"
version = "0.1.0"
authors = ["Ellen <supbscripter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = { path = "../shipyard" }
tetra = { path = "../tetra" }
glob = "0.3.0"
rand = "0.7.3"