[package]
name = "vermarine-lib"
version = "0.1.0"
authors = ["Ellen <supbscripter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shipyard = { path = "../shipyard", features = ["non_send", "non_sync"] }
tetra = { path = "../tetra" }
rand = "0.7"
